0x04-more_functions_nested_loops/1-main.c:
n.c:14:24: error: implicit declaration of function ‘_isdigit’ [-Werror=implicit-function-declaration]
   14 |  printf("%c: %d\n", c, _isdigit(c));
      |                        ^~~~~~~~
cc1: all warnings being treated as errors

